[gd_scene load_steps=7 format=3 uid="uid://bp7ajmh64iah3"]

[ext_resource type="Script" path="res://Intro/Elements/CubeScene.gd" id="1"]

[sub_resource type="BoxMesh" id="1"]

[sub_resource type="StandardMaterial3D" id="2"]
transparency = 1
albedo_color = Color(0.847059, 0.792157, 0.733333, 1)

[sub_resource type="StandardMaterial3D" id="3"]
transparency = 1
albedo_color = Color(0.333333, 0.458824, 0.878431, 0.501961)

[sub_resource type="StandardMaterial3D" id="4"]
transparency = 1
albedo_color = Color(0.647059, 0.839216, 0.635294, 1)

[sub_resource type="Environment" id="5"]
background_mode = 1

[node name="Node3D" type="Node3D"]
script = ExtResource("1")

[node name="MainCube" type="MeshInstance3D" parent="."]
transform = Transform3D(0.902886, 0, 0.429881, 0.14378, 0.942408, -0.301984, -0.405123, 0.334465, 0.850887, 0, 1.39, 0)
mesh = SubResource("1")
material/0 = SubResource("2")

[node name="BlendedCube" type="MeshInstance3D" parent="."]
transform = Transform3D(0.317714, 0.123133, 0.209514, 0.165597, 0.142701, -0.334983, -0.177863, 0.35281, 0.0623691, 2.48047, 1.89446, -0.359144)
mesh = SubResource("1")
material/0 = SubResource("3")

[node name="ClippedCube" type="MeshInstance3D" parent="."]
transform = Transform3D(0.418853, 0.678306, 0.896919, 0.108939, 0.928138, -0.752789, -1.11924, 0.344182, 0.262383, -3.25479, 1.47538, 1.17964)
mesh = SubResource("1")
material/0 = SubResource("4")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.24221, -0.378691, 0.893268, 0, 0.920682, 0.390313, -0.970224, -0.0945377, 0.222998, 5.30306, 3.3604, 1.39783)
current = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.518102, -0.645271, 0.561423, 0.437613, 0.763954, 0.474204, -0.734891, -3.66078e-08, 0.678185, 0, 0, 6.33155)
light_color = Color(1, 0.901961, 0.709804, 1)

[node name="DirectionalLight2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.405877, 0.5276, 0.746259, 0.652847, 0.738795, -0.167251, -0.639574, 0.41931, -0.644302, 0, 0, -4.80965)
light_color = Color(0.686275, 0.780392, 1, 1)

[node name="Tween" type="Tween" parent="."]
